--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ ktor:
     modules:
       - com.pb.ApplicationKt.module
   deployment:
-    port: $PORT
+    port: 8080
 jwt:
   issuer: "pb.com"
   realm: "pb-server"
